- CS 340 final project ui work

--- a/CS_340/final_project/app/views/index.pug
+++ b/CS_340/final_project/app/views/index.pug
@@ -5,6 +5,10 @@ html
     title= title
 
 div(class="statusBar" id="statusBar")
+  div(class="statusAlert" id="statusAlert")
+  div(class="timerControl")
+    img(src="images/timectl.png" style="height: 75%; width: auto; padding-right: 3%;" onclick="timerClick();")
+    div(id="timerControl")
 div(class="propertyBar" id="propertyBar")
 div(class="spaceView" id="spaceView")
 
