- CS 340 final project work

--- a/CS_340/final_project/app/views/index.pug
+++ b/CS_340/final_project/app/views/index.pug
@@ -4,12 +4,13 @@ html
     link(rel="stylesheet" href="css/bootstrap.min.css")
     title= title
 
-div(class="statusBar")
-div(class="propertyBar")
-div(class="spaceView")
+div(class="statusBar" id="statusBar")
+div(class="propertyBar" id="propertyBar")
+div(class="spaceView" id="spaceView")
 
 script(src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous")
 script(src='http://requirejs.org/docs/release/2.2.0/minified/require.js')
 script(src="scripts/bootstrap.min.js")
+script(src="scripts/raphael.min.js")
 script(src="scripts/space_view.js")
 script(src="scripts/space_controller.js")
