- CS 340 final project work

--- a/CS_340/final_project/app/views/index.pug
+++ b/CS_340/final_project/app/views/index.pug
@@ -7,8 +7,9 @@ html
 div(class="statusBar" id="statusBar")
   div(class="statusAlert" id="statusAlert")
   div(class="timerControl")
-    img(src="images/timectl.png" style="height: 75%; width: auto; padding-right: 3%;" onclick="timerClick();")
     div(id="timerControl")
+    img(src="images/timectl.png" style="height: 75%; width: auto; padding-left: 3%; padding-right: 3%;" onclick="timerClick();")
+    
 div(class="propertyBar" id="propertyBar")
 div(class="spaceView" id="spaceView")
 
