- CS 340 final project work

--- a/CS_340/final_project/app/views/index.pug
+++ b/CS_340/final_project/app/views/index.pug
@@ -11,6 +11,9 @@ div(class="statusBar" id="statusBar")
     img(src="images/timectl.png" style="height: 75%; width: auto; padding-left: 3%; padding-right: 3%;" onclick="timerClick();")
     
 div(class="propertyBar" id="propertyBar")
+  div(class="locationName" id="locationName")
+  div(class="locationItems" id="locationItems")
+  div(class="locationTransport" id="locationTransport")
 div(class="spaceView" id="spaceView")
 
 script(src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous")
