--- a/CS_340/final_project/public/css/style.css
+++ b/CS_340/final_project/public/css/style.css
@@ -63,7 +63,7 @@ body {
     width: 75%;
     text-align: center;
     color: #d0d0d0;
-    background-color: #5060e0;
+    background-color: #3040a0;
     border-radius: 20px;
 }
 
@@ -73,7 +73,7 @@ body {
     width: 75%;
     text-align: left;
     color: #d0d0d0;
-    background-color: #5060e0;
+    background-color: #3040a0;
     border-radius: 20px;
     padding: 10px;
 }
@@ -82,8 +82,8 @@ body {
     font-size: 1.5em;
     margin-left: 12.5%;
     width: 75%;
-    text-align: center;
+    text-align: left;
     color: #d0d0d0;
-    background-color: #5060e0;
+    background-color: #3040a0;
     border-radius: 20px;
 }
