--- a/CS_340/final_project/app/views/index.pug
+++ b/CS_340/final_project/app/views/index.pug
@@ -18,22 +18,30 @@ div(class="propertyBar" id="propertyBar")
     | Send items to another location.
     br
     br
-    div(class="dropdown")
-      button(class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown" id="itemToSend")
-        | Item to send
-        span(class="caret")
-      ul(class="dropdown-menu" id="itemsToSend")
+    div(style="width:75%; margin-left: 12.5%;")
+      div(class="dropdown")
+        button(class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown" id="itemToSend")
+          | Item to send
+          span(class="caret")
+        ul(class="dropdown-menu" id="itemsToSend")
 
-    br
+      br
+     
+      div(class="dropdown")
+        button(class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown" id="itemDestinationLocation")
+          | Location to send to
+          span(class="caret")
+        ul(class="dropdown-menu" id="destinationLocations")
+      br
+      div(class="form-group")
+        label(for="usr")
+          |Qty:
+        input(type="text" class="form-control" id="usr")
 
-    div(class="dropdown")
-      button(class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown" id="itemDestinationLocation")
-        | Location to send to
-        span(class="caret")
-      ul(class="dropdown-menu" id="destinationLocations")
-    div(style="text-align: right; padding-right: 30px; padding-bottom: 30px;")
-      button(type="button" class="btn btn-success")
-        | Send!
+      div(style="text-align: right; padding-bottom: 30px;")
+        button(type="button" class="btn btn-success")
+          | Send!
+
 div(class="spaceView" id="spaceView")
 
 script(src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous")
