--- a/CS_340/final_project/public/css/style.css
+++ b/CS_340/final_project/public/css/style.css
@@ -8,7 +8,7 @@ body {
     width: 100%;
     height: 10%;
     background-color: #454545;
-    background-image: url('../images/carbon.jpg');
+    background-image: url('../images/space.jpg');
     background-color: #373737;
     background-repeat: repeat;
     background-attachment: fixed;
@@ -19,7 +19,7 @@ body {
     height: 90%;
     float: left;
     background-color: #603030;
-    background-image: url('../images/carbon.jpg');
+    background-image: url('../images/space.jpg');
     background-color: #373737;
     background-repeat: no-repeat;
     background-attachment: fixed;
