- CS 340 final project work

--- a/CS_340/final_project/app/views/index.pug
+++ b/CS_340/final_project/app/views/index.pug
@@ -39,7 +39,7 @@ div(class="propertyBar" id="propertyBar")
         input(type="text" class="form-control" id="usr")
 
       div(style="text-align: right; padding-bottom: 30px;")
-        button(type="button" class="btn btn-success")
+        button(type="button" class="btn btn-success" onclick="sendItems();")
           | Send!
 
 div(class="spaceView" id="spaceView")
