- CS 340 final project work

--- a/CS_340/final_project/app/views/index.pug
+++ b/CS_340/final_project/app/views/index.pug
@@ -34,9 +34,9 @@ div(class="propertyBar" id="propertyBar")
         ul(class="dropdown-menu" id="destinationLocations")
       br
       div(class="form-group")
-        label(for="usr")
+        label(for="itemQtySend")
           |Qty:
-        input(type="text" class="form-control" id="usr")
+        input(type="text" class="form-control" id="itemQtySend")
 
       div(style="text-align: right; padding-bottom: 30px;")
         button(type="button" class="btn btn-success" onclick="sendItems();")
