- CS 496 OAuth2 work...

--- a/CS_496/assignment3/server/app/views/main.pug
+++ b/CS_496/assignment3/server/app/views/main.pug
@@ -8,7 +8,7 @@ html(lang="en")
     script(src='../../bootstrap/jquery-3.2.1.slim.min.js')
     script(src='../../bootstrap/popper.min.js')
     script(src='../../bootstrap/bootstrap.min.js')
-    script(src='../../client/state.js')
+    script(src='../../oauth2/state.js')
   body
     nav(class="navbar navbar-dark bg-dark viewNavbar")
       a(class="navbar-brand" href="#")
