--- a/CS_496/assignment3/server/app/views/main.pug
+++ b/CS_496/assignment3/server/app/views/main.pug
@@ -8,13 +8,13 @@ html(lang="en")
     script(src='../../bootstrap/jquery-3.2.1.slim.min.js')
     script(src='../../bootstrap/popper.min.js')
     script(src='../../bootstrap/bootstrap.min.js')
-    script(src='../../oauth2/state.js')
+    script(src='../../client/state.js')
   body
     nav(class="navbar navbar-dark bg-dark viewNavbar")
       a(class="navbar-brand" href="#")
         | Magic OAuth 2.0 doughnut (from that particular bakery)
       div(class="form-inline")
-        button(class="btn btn-outline-success" onclick="StartOAuth(clientID, superSecret);")
+        button(class="btn btn-outline-success" onclick="StartOAuth(superSecret);")
           | Sign in
 
     div(class="viewContainer container-fluid" id="body")
