- Begin deployment of client side after OAuth2

--- a/CS_496/assignment3/server/css/main.css
+++ b/CS_496/assignment3/server/css/main.css
@@ -20,3 +20,10 @@ body {
     width: auto;
     height: auto;
 }
+
+.imgfitparent {
+    min-width: 30%;
+    min-height: 30%;
+    width: 30%;
+    height: 30%;
+}
