--- a/CS_496/assignment3/server/app/views/oauth2.pug
+++ b/CS_496/assignment3/server/app/views/oauth2.pug
@@ -9,7 +9,6 @@ html(lang="en")
     script(src='../../bootstrap/popper.min.js')
     script(src='../../bootstrap/bootstrap.min.js')
     script(src='../../client/state.js')
-    script(src='../../client/getUserInfo.js')
   body
     nav(class="navbar navbar-dark bg-dark viewNavbar")
       a(class="navbar-brand" href="#")
@@ -28,5 +27,5 @@ html(lang="en")
         | Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.
       p(class="mb-0")
         | Whenever you need to, be sure to use margin utilities to keep things nice and tidy.
--
-  currentUser.Connect(token);  
+    
+    {{userData}}
