- CS 496 Assignment 3 - Final work... I thinkk

--- a/CS_496/assignment3/server/app/views/oauth2.pug
+++ b/CS_496/assignment3/server/app/views/oauth2.pug
@@ -12,9 +12,8 @@ html(lang="en")
   body
     script
       | var userData=
-      !=JSON.stringify(userData)
-      |;
-      | $('#myModal').modal('show');
+      !=userData
+      |);
       | console.log(userData);
 
     nav(class="navbar navbar-dark bg-dark viewNavbar")
@@ -32,12 +31,17 @@ html(lang="en")
         div(class="modal-content")
           div(class="modal-header")
             h4(class="modal-title")
+              img(src=image.url)
               | Sign in successful!
             button(type="button" class="close" data-dismiss="modal")
               | &times;
           div(class="modal-body")
             p
-              | {{userData}}
+              =displayName
+            p
+              =emails[0].value
           div(class="modal-footer")
             button(type="button" class="btn btn-default" data-dismiss="modal")
               | Close
+    script
+      | $('#myModal').modal('show');
