--- a/CS_496/assignment3/server/app/views/oauth2.pug
+++ b/CS_496/assignment3/server/app/views/oauth2.pug
@@ -25,17 +25,21 @@ html(lang="en")
         div(class="modal-content")
           div(class="modal-header")
             h4(class="modal-title")
-              img(src=image.url)
+              img(src=userData.image.url)
               | Sign in successful!
             button(type="button" class="close" data-dismiss="modal")
               | &times;
           div(class="modal-body")
             p
-              =displayName
+              =userData.displayName
             p
-              =emails[0].value
+              =userData.emails[0].value
           div(class="modal-footer")
             button(type="button" class="btn btn-default" data-dismiss="modal")
               | Close
     script
+      | var userData =
+      = JSON.stringify(userData)
+      | ;
+      | console.log(userData);
       | $('#myModal').modal('show');
