--- a/CS_496/assignment3/server/app/views/oauth2.pug
+++ b/CS_496/assignment3/server/app/views/oauth2.pug
@@ -25,21 +25,24 @@ html(lang="en")
         div(class="modal-content")
           div(class="modal-header")
             h4(class="modal-title")
-              img(src=userData.image.url)
+              img(src=image.url)
               | Sign in successful!
             button(type="button" class="close" data-dismiss="modal")
               | &times;
           div(class="modal-body")
             p
-              =userData.displayName
+              =name.givenName
+              =name.familyName
             p
-              =userData.emails[0].value
+              =emails[0].value
+            p
+              a(href=url)
+                | Visit Google+ page
+            p
+              | Client Secret
+              =superSecret
           div(class="modal-footer")
             button(type="button" class="btn btn-default" data-dismiss="modal")
               | Close
     script
-      | var userData =
-      = JSON.stringify(userData)
-      | ;
-      | console.log(userData);
       | $('#myModal').modal('show');
