--- a/CS_496/assignment3/server/app/views/oauth2.pug
+++ b/CS_496/assignment3/server/app/views/oauth2.pug
@@ -25,22 +25,25 @@ html(lang="en")
         div(class="modal-content")
           div(class="modal-header")
             h4(class="modal-title")
-              img(src=image.url)
+              img(src=userData.image.url)
               | Sign in successful!
             button(type="button" class="close" data-dismiss="modal")
               | &times;
           div(class="modal-body")
             p
-              =name.givenName
-              =name.familyName
+              =userData.displayName
             p
-              =emails[0].value
+              =userData.name.givenName
+              | 
+              =userData.name.familyName
             p
-              a(href=url)
+              =userData.emails[0].value
+            p
+              a(href=userData.url)
                 | Visit Google+ page
             p
               | Client Secret
-              =superSecret
+              =state
           div(class="modal-footer")
             button(type="button" class="btn btn-default" data-dismiss="modal")
               | Close
