- CS 496 - Assignment 3 - Fix client formatting

--- a/CS_496/assignment3/server/app/views/oauth2.pug
+++ b/CS_496/assignment3/server/app/views/oauth2.pug
@@ -33,16 +33,12 @@ html(lang="en")
             p
               =userData.displayName
             p
-              =userData.name.givenName
-              | 
-              =userData.name.familyName
-            p
               =userData.emails[0].value
             p
               a(href=userData.url)
                 | Visit Google+ page
             p
-              | Client Secret
+              | Client Secret : 
               =state
           div(class="modal-footer")
             button(type="button" class="btn btn-default" data-dismiss="modal")
