- CS 496 - Assignment 3 - Final client work

--- a/CS_496/assignment3/server/app/views/main.pug
+++ b/CS_496/assignment3/server/app/views/main.pug
@@ -19,4 +19,24 @@ html(lang="en")
 
     div(class="viewContainer container-fluid" id="body")
       img(src="../../assets/knucks.png" class="imgfitparent")
-      
+
+    div(id="myModal" class="modal fade" role="dialog")
+      div(class="modal-dialog")
+        div(class="modal-content")
+          div(class="modal-header")
+            h4(class="modal-title")
+              | OAuth 2.0 Demo
+            button(type="button" class="close" data-dismiss="modal")
+              | &times;
+          div(class="modal-body")
+            p
+              | This application will demonstrate how to authenticate with Google's OAuth 2.0 framework.
+            p
+              | Please close this dialog and click the sign in button on the top right of this page.
+            p
+              | Note: Some google profiles do not have a "displayName" value set. In this case, your name will be replaced with "Anonymous"
+          div(class="modal-footer")
+            button(type="button" class="btn btn-default" data-dismiss="modal")
+              | Close
+    script
+      | $('#myModal').modal('show');
