--- a/CS_496/Geotagger/app/src/main/res/layout/activity_geotagger.xml
+++ b/CS_496/Geotagger/app/src/main/res/layout/activity_geotagger.xml
@@ -6,13 +6,112 @@
     android:layout_height="match_parent"
     tools:context="edu.osu.praterj.geotagger.Geotagger">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@color/color1">
+
+            <TextView
+                android:id="@+id/longText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/latText"
+                android:padding="5dp"
+                android:text="@string/longText"
+                android:textSize="15dp" />
+
+
+            <TextView
+                android:id="@+id/latText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:padding="5dp"
+                android:text="@string/latText"
+                android:textSize="15dp" />
+
+            <EditText
+                android:id="@+id/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/longText"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="" />
+
+            <ImageView
+                android:id="@+id/gpsDisabled"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_above="@+id/editText"
+                android:layout_alignParentEnd="true"
+                android:visibility="visible"
+                app:srcCompat="@drawable/gps_disabled" />
+
+            <ImageView
+                android:id="@+id/gpsEnabled"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_above="@+id/editText"
+                android:layout_alignParentEnd="true"
+                android:visibility="visible"
+                app:srcCompat="@drawable/gps_enabled" />
+
+            <Button
+                android:id="@+id/addGeoMsg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/editText"
+                android:text="@string/addGeoMsg" />
+
+            <TextView
+                android:id="@+id/textRealLong"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/editText"
+                android:layout_alignTop="@+id/longText"
+                android:layout_toEndOf="@+id/longText"
+                android:padding="5dp"
+                android:layout_toStartOf="@+id/gpsDisabled"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/textRealLat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/longText"
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/longText"
+                android:padding="5dp"
+                android:layout_toStartOf="@+id/gpsDisabled"
+                android:text="" />
+
+            <Button
+                android:id="@+id/geoMsgClear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/addGeoMsg"
+                android:layout_alignParentStart="true"
+                android:text="@string/clearGeoMsg" />
+
+        </RelativeLayout>
+
+        <ListView
+            android:id="@+id/msgList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
