--- a/CS_496/Geotagger/app/src/main/res/values/colors.xml
+++ b/CS_496/Geotagger/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="color1">#6060B0</color>
+    <color name="textBox1">#A0A0FF</color>
 </resources>
