--- a/CS_496/CoolPix/android/app/src/main/res/values/colors.xml
+++ b/CS_496/CoolPix/android/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorMainBack">#505055</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorToolsbackground">#303050</color>
 </resources>
