- CS 496 CoolPix work.

--- a/CS_496/CoolPix/android/app/src/main/res/layout/posts_layout.xml
+++ b/CS_496/CoolPix/android/app/src/main/res/layout/posts_layout.xml
@@ -44,8 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_below="@+id/post_liked"
-            android:scaleType="fitXY"
-            app:srcCompat="@android:drawable/alert_dark_frame" />
+            android:scaleType="fitXY" />
 
         <TextView
             android:id="@+id/post_body"
