--- a/CS_496/CoolPix/android/app/src/main/res/layout/activity_add_new_post.xml
+++ b/CS_496/CoolPix/android/app/src/main/res/layout/activity_add_new_post.xml
@@ -11,7 +11,9 @@
         android:id="@+id/camera2Container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
         android:background="#ddf"
-        tools:context="com.example.android.camera2basic.CameraActivity">
-    </FrameLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:context="com.example.android.camera2basic.CameraActivity"></FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
