--- a/CS_496/CoolPix/android/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/CS_496/CoolPix/android/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -19,35 +19,48 @@
 
     <edu.osu.praterj.coolpix.AutoFitTextureView
         android:id="@+id/texture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/control"
         android:layout_width="match_parent"
-        android:layout_height="112dp"
+        android:layout_height="150dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="@color/control_background">
+
+        <EditText
+            android:id="@+id/editCaption"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textShortMessage"
+            android:text="@string/post_caption" />
+
+        <EditText
+            android:id="@+id/editBody"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/picture"
+            android:layout_alignParentStart="true"
+            android:ems="10"
+            android:inputType="textMultiLine"
+            android:singleLine="false"
+            android:text="@string/post_body" />
 
         <Button
             android:id="@+id/picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center"
+            android:layout_marginBottom="12dp"
             android:text="@string/picture" />
 
-        <Button
-            android:id="@+id/info"
-            android:contentDescription="@string/description_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|right"
-            android:padding="20dp"
-            android:text="@string/info" />
-
-    </FrameLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
